// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Locate river component test renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 100,
        "paddingLeft": 50,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1B262C",
            "fontSize": 30,
          },
          Object {
            "fontWeight": "bold",
          },
        ]
      }
    >
      First Step...
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#1B262C",
            "fontSize": 30,
          },
          Object {
            "marginTop": 50,
            "paddingLeft": 50,
          },
        ]
      }
    >
      Locate the river
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="E.g.  Liffey or 53.3539, -6.3557"
      placeholderTextColor="#00000"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderColor": "#95989A",
            "borderRadius": 5,
            "borderWidth": 1,
            "color": "#1B262C",
            "fontSize": 15,
            "height": 40,
            "marginTop": 50,
            "paddingLeft": 10,
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
      width={730}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#1B262C",
        "marginTop": 5,
        "paddingLeft": 30,
      }
    }
  >
    River name or Coordinates
  </Text>
  <View
    style={
      Object {
        "marginTop": 50,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              Object {
                "color": "green",
              },
            ]
          }
        >
          search
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Locate
        </Text>
      </View>
    </View>
  </View>
  <View>
    <Text
      style={
        Object {
          "color": "#1B262C",
          "fontSize": 30,
        }
      }
    >
      
    </Text>
    <Text
      style={
        Object {
          "color": "#1B262C",
          "fontSize": 30,
        }
      }
    >
      Latitude: 
    </Text>
    <Text
      style={
        Object {
          "color": "#1B262C",
          "fontSize": 30,
        }
      }
    >
      Longitude: 
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`Locate river component test should render locateRiverComponent 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 100,
        "paddingLeft": 50,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1B262C",
            "fontSize": 30,
          },
          Object {
            "fontWeight": "bold",
          },
        ]
      }
    >
      First Step...
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#1B262C",
            "fontSize": 30,
          },
          Object {
            "marginTop": 50,
            "paddingLeft": 50,
          },
        ]
      }
    >
      Locate the river
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="E.g.  Liffey or 53.3539, -6.3557"
      placeholderTextColor="#00000"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderColor": "#95989A",
            "borderRadius": 5,
            "borderWidth": 1,
            "color": "#1B262C",
            "fontSize": 15,
            "height": 40,
            "marginTop": 50,
            "paddingLeft": 10,
          },
        ]
      }
      testID="userTestInput"
      underlineColorAndroid="transparent"
      value=""
      width={730}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#1B262C",
        "marginTop": 5,
        "paddingLeft": 30,
      }
    }
  >
    River name or Coordinates
  </Text>
  <View
    style={
      Object {
        "marginTop": 50,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              Object {
                "color": "green",
              },
            ]
          }
        >
          search
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Locate
        </Text>
      </View>
    </View>
  </View>
  <View>
    <Text
      style={
        Object {
          "color": "#1B262C",
          "fontSize": 30,
        }
      }
    >
      
    </Text>
    <Text
      style={
        Object {
          "color": "#1B262C",
          "fontSize": 30,
        }
      }
    >
      Latitude: 
    </Text>
    <Text
      style={
        Object {
          "color": "#1B262C",
          "fontSize": 30,
        }
      }
    >
      Longitude: 
    </Text>
  </View>
</RCTSafeAreaView>
`;
